data/playtesting/sim-reports/archive/v1.0-alpha.47/raport_telemetrii.md
[Strona główna](../../../../../README.md) > [v1.0-alpha.47](README.md) > [raport_telemetrii](raport_telemetrii.md)

---

# Raport Telemetrii i Szans Wygranych (Win Shares) dla Wszystkich 16 Setupów — Wersja Balansu: v1.0-alpha.47

**Wersja Balansu:** `v1.0-alpha.47` | **Data:** 2026-08-23 11:52 | **Wielkość Próby:** 1000 gier/setup (16000 gier łącznie) | **Czas Symulacji:** 5.08s

*Score* = legacy (win share + kara witalności w jednym wykładniku). *Balance* = tylko równość win share.

## 1. Tabela Szans Wygranych Frakcji (Win Share %) vs Punkt Idealny

| Setup | Gr. | Score | Balance | Ideal % | SO % | CAA % | KB % | KT % | GC % | Status Rozkładu Frakcji |
| :--- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :--- |
| `3p-cienie-kabala-gildia` | 3 | 🔴 ** 27.0** | 🔴 35.5 | 33.3% | - | 16.7% | - | 33.5% | 49.8% | 🔴 ODCHYLONY |
| `3p-cienie-korona-gildia` | 3 | 🔴 ** 17.1** | 🔴 30.7 | 33.3% | - | 12.5% | 40.1% | - | 47.4% | 🔴 ODCHYLONY |
| `3p-cienie-korona-kabala` | 3 | 🔴 ** 29.1** | 🔴 37.4 | 33.3% | - | 15.2% | 40.0% | 44.8% | - | 🔴 ODCHYLONY |
| `3p-korona-kabala-gildia` | 3 | 🔴 ** 30.8** | 🔴 30.8 | 33.3% | - | - | 24.9% | 20.7% | 54.4% | 🔴 ODCHYLONY |
| `3p-oficjum-alandalus-gildia` | 3 | 🔴 **  2.1** | 🔴 9.7 | 33.3% | 69.9% | 14.7% | - | - | 15.4% | 🔴 ODCHYLONY |
| `3p-oficjum-alandalus-kabala` | 3 | 🔴 **  9.7** | 🔴 15.0 | 33.3% | 64.3% | 16.4% | - | 19.3% | - | 🔴 ODCHYLONY |
| `3p-oficjum-alandalus-korona` | 3 | 🔴 **  5.5** | 🔴 26.5 | 33.3% | 55.5% | 15.9% | 28.6% | - | - | 🔴 ODCHYLONY |
| `3p-oficjum-kabala-gildia` | 3 | 🔴 **  2.7** | 🔴 10.0 | 33.3% | 68.2% | - | - | 7.5% | 24.3% | 🔴 ODCHYLONY |
| `3p-oficjum-korona-gildia` | 3 | 🔴 **  8.7** | 🔴 28.7 | 33.3% | 55.5% | - | 23.0% | - | 21.5% | 🔴 ODCHYLONY |
| `3p-oficjum-korona-kabala` | 3 | 🔴 **  2.4** | 🔴 16.7 | 33.3% | 62.9% | - | 17.8% | 19.3% | - | 🔴 ODCHYLONY |
| `4p-core` | 4 | 🔴 ** 24.3** | 🔴 48.3 | 25.0% | 26.9% | 12.5% | 27.3% | 33.3% | - | 🔴 ODCHYLONY |
| `4p-no-cienie` | 4 | 🔴 ** 55.7** | 🟡 84.3 | 25.0% | 25.1% | - | 22.4% | 28.8% | 23.7% | 🔴 ODCHYLONY |
| `4p-no-kabala` | 4 | 🔴 ** 36.1** | 🔴 50.2 | 25.0% | 23.5% | 13.9% | 33.5% | - | 29.1% | 🔴 ODCHYLONY |
| `4p-no-korona` | 4 | 🔴 ** 44.4** | 🔴 58.4 | 25.0% | 27.2% | 14.7% | - | 28.6% | 29.5% | 🔴 ODCHYLONY |
| `4p-no-oficjum` | 4 | 🔴 ** 24.4** | 🔴 59.7 | 25.0% | - | 15.5% | 31.0% | 25.6% | 27.9% | 🔴 ODCHYLONY |
| `5p-full` | 5 | 🔴 **  5.7** | 🔴 42.1 | 20.0% | 31.2% | 11.7% | 19.4% | 23.8% | 13.9% | 🔴 ODCHYLONY |

## 2. Pełna Tabela Telemetrii 5 Filarów Silnika Gry z Oceną Optymalności

| Setup | Średnia Er | Limit Er % (Deadlock) | Pas Biedy % (Złoto) | Autodafé / Partię | Oskarżenia / Partię | Śr. Złoto End | Śr. Herezja End | Globalny Status Telemetrii |
| :--- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :--- |
| `3p-cienie-kabala-gildia` | 5.98 🟢 | 0.0% 🟢 | 0.4% 🟢 | 1.54 🟢 | 5.33 🔴 | 9.76zł | 8.24 | 🟢 OPTYMALNA |
| `3p-cienie-korona-gildia` | 6.04 🟢 | 0.0% 🟢 | 4.0% 🟢 | 1.55 🟢 | 5.7 🔴 | 9.57zł | 8.68 | 🟢 OPTYMALNA |
| `3p-cienie-korona-kabala` | 6.47 🟢 | 1.0% 🟢 | 5.2% 🟢 | 1.47 🟢 | 5.55 🔴 | 8.7zł | 7.69 | 🟢 OPTYMALNA |
| `3p-korona-kabala-gildia` | 5.75 🟢 | 0.0% 🟢 | 5.3% 🟢 | 1.39 🟢 | 5.36 🔴 | 3.07zł | 8.7 | 🟢 OPTYMALNA |
| `3p-oficjum-alandalus-gildia` | 5.55 🟢 | 0.0% 🟢 | 1.8% 🟢 | 1.96 🟡 | 5.47 🔴 | 10.08zł | 9.04 | 🟢 OPTYMALNA |
| `3p-oficjum-alandalus-kabala` | 5.49 🟢 | 0.0% 🟢 | 2.1% 🟢 | 1.94 🟡 | 4.18 🟢 | 8.42zł | 8.17 | 🟢 OPTYMALNA |
| `3p-oficjum-alandalus-korona` | 6.14 🟢 | 0.3% 🟢 | 5.1% 🟢 | 2.06 🔴 | 5.3 🔴 | 8.88zł | 8.7 | 🟢 OPTYMALNA |
| `3p-oficjum-kabala-gildia` | 5.54 🟢 | 0.0% 🟢 | 2.6% 🟢 | 1.89 🟡 | 5.67 🔴 | 3.29zł | 8.93 | 🟢 OPTYMALNA |
| `3p-oficjum-korona-gildia` | 5.63 🟢 | 0.0% 🟢 | 6.7% 🟢 | 1.87 🟡 | 5.74 🔴 | 3.53zł | 9.34 | 🟢 OPTYMALNA |
| `3p-oficjum-korona-kabala` | 5.13 🟢 | 0.0% 🟢 | 6.7% 🟢 | 1.73 🟢 | 4.25 🟢 | 2.09zł | 8.65 | 🟢 OPTYMALNA |
| `4p-core` | 5.54 🟢 | 0.0% 🟢 | 4.8% 🟢 | 2.03 🔴 | 5.61 🔴 | 6.58zł | 7.88 | 🟢 OPTYMALNA |
| `4p-no-cienie` | 5.28 🟢 | 0.0% 🟢 | 5.9% 🟢 | 1.87 🟡 | 5.71 🔴 | 2.81zł | 8.4 | 🟢 OPTYMALNA |
| `4p-no-kabala` | 5.54 🟢 | 0.0% 🟢 | 4.4% 🟢 | 1.98 🟡 | 5.88 🔴 | 7.51zł | 8.44 | 🟢 OPTYMALNA |
| `4p-no-korona` | 5.47 🟢 | 0.0% 🟢 | 1.6% 🟢 | 1.97 🟡 | 5.91 🔴 | 7.39zł | 8.19 | 🟢 OPTYMALNA |
| `4p-no-oficjum` | 5.21 🟢 | 0.0% 🟢 | 3.5% 🟢 | 1.32 🟢 | 4.78 🟡 | 6.89zł | 7.67 | 🟢 OPTYMALNA |
| `5p-full` | 4.92 🟡 | 0.0% 🟢 | 3.8% 🟢 | 1.83 🟡 | 5.13 🔴 | 5.8zł | 7.69 | ⚠️ WARTOŚCI BRZEGOWE |

## 3. Witalność Mechanik Frakcji (Mechanic Vitality & Degeneration Gate)

| Setup | Status Witalności | Kara | Zidentyfikowane Ostrzeżenia / Degradacje Mechanik |
| :--- | :---: | :---: | :--- |
| `3p-cienie-kabala-gildia` | ⚠️ Ostrzeżenie Witalności | 0.275 | Przedwczesne Zwycięstwa (Era 1-2): 1.1% gier (>0.5%) |
| `3p-cienie-korona-gildia` | ⚠️ Ostrzeżenie Witalności | 0.585 | Przedwczesne Zwycięstwa (Era 1-2): 2.1% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 6.6% gier (>6.0%) |
| `3p-cienie-korona-kabala` | ⚠️ Ostrzeżenie Witalności | 0.250 | Przedwczesne Zwycięstwa (Era 1-2): 1.0% gier (>0.5%) |
| `3p-korona-kabala-gildia` | 🟢 Pełna Witalność | 0.000 | Brak — wszystkie mechaniki aktywne i płynne |
| `3p-oficjum-alandalus-gildia` | ⚠️ Ostrzeżenie Witalności | 1.530 | Przedwczesne Zwycięstwa (Era 1-2): 1.2% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 6.3% gier (>6.0%), Martwa ścieżka stosy (swiete-oficjum): 12/699 wygranych (<8%) — gra tylko skazania |
| `3p-oficjum-alandalus-kabala` | ⚠️ Ostrzeżenie Witalności | 0.440 | Przedwczesne Zwycięstwa (Era 1-2): 1.0% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 7.9% gier (>6.0%) |
| `3p-oficjum-alandalus-korona` | ⚠️ Ostrzeżenie Witalności | 1.565 | Przedwczesne Zwycięstwa (Era 1-2): 1.3% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 6.4% gier (>6.0%), Martwa ścieżka stosy (swiete-oficjum): 22/552 wygranych (<8%) — gra tylko skazania |
| `3p-oficjum-kabala-gildia` | ⚠️ Ostrzeżenie Witalności | 1.300 | Zbyt Wczesne Zakończenia (Era 1-3): 7.0% gier (>6.0%), Martwa ścieżka stosy (swiete-oficjum): 4/682 wygranych (<8%) — gra tylko skazania |
| `3p-oficjum-korona-gildia` | ⚠️ Ostrzeżenie Witalności | 1.200 | Martwa ścieżka stosy (swiete-oficjum): 19/555 wygranych (<8%) — gra tylko skazania |
| `3p-oficjum-korona-kabala` | ⚠️ Ostrzeżenie Witalności | 1.950 | Przedwczesne Zwycięstwa (Era 1-2): 0.6% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 12.0% gier (>6.0%), Martwa ścieżka stosy (swiete-oficjum): 41/629 wygranych (<8%) — gra tylko skazania |
| `4p-core` | ⚠️ Ostrzeżenie Witalności | 0.685 | Przedwczesne Zwycięstwa (Era 1-2): 1.7% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 8.6% gier (>6.0%) |
| `4p-no-cienie` | ⚠️ Ostrzeżenie Witalności | 0.415 | Przedwczesne Zwycięstwa (Era 1-2): 0.7% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 8.4% gier (>6.0%) |
| `4p-no-kabala` | ⚠️ Ostrzeżenie Witalności | 0.330 | Przedwczesne Zwycięstwa (Era 1-2): 1.2% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 6.3% gier (>6.0%) |
| `4p-no-korona` | ⚠️ Ostrzeżenie Witalności | 0.275 | Przedwczesne Zwycięstwa (Era 1-2): 1.1% gier (>0.5%) |
| `4p-no-oficjum` | ⚠️ Ostrzeżenie Witalności | 0.895 | Przedwczesne Zwycięstwa (Era 1-2): 2.1% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 9.7% gier (>6.0%) |
| `5p-full` | 🔴 Zagrożenie Witalności (Kastracja Mechanik) | 2.007 | Przedwczesne Zwycięstwa (Era 1-2): 1.3% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 9.6% gier (>6.0%), Zbyt Krótka Średnia Rozgrywka 4.92 Er (<5.0 Er), Martwa ścieżka stosy (swiete-oficjum): 17/312 wygranych (<8%) — gra tylko skazania |

## 4. Rozkład Długości Partii i Zwycięstw Frakcji według Er

### 4.1. Ogólny Rozkład Końca Partii według Er (Wszystkie Symulowane Gry)

| Era Końca Gry | Liczba Gier | Udział % | Wizualizacja Rozkładu | Ocena Tempa Gry |
| :---: | :---: | :---: | :--- | :--- |
| **Era 2** | 166 |   1.0% | `█                   ` | 🔴 Za wczesna (sprint / brak intrygi) |
| **Era 3** | 953 |   6.0% | `███                 ` | 🟡 Wczesna / Szybka gra |
| **Era 4** | 2,739 |  17.1% | `█████████           ` | 🟡 Wczesna / Szybka gra |
| **Era 5** | 4,214 |  26.3% | `█████████████       ` | 🟢 Złote Okno Rozgrywki (Ery 5–7) |
| **Era 6** | 3,807 |  23.8% | `████████████        ` | 🟢 Złote Okno Rozgrywki (Ery 5–7) |
| **Era 7** | 2,449 |  15.3% | `████████            ` | 🟢 Złote Okno Rozgrywki (Ery 5–7) |
| **Era 8** | 1,013 |   6.3% | `███                 ` | 🟡 Przedłużona |
| **Era 9** | 433 |   2.7% | `█                   ` | 🔴 Limit Er (Deadlock) |
| **Era 10** | 121 |   0.8% | `                    ` | 🔴 Limit Er (Deadlock) |
| **Era 11** | 47 |   0.3% | `                    ` | 🔴 Limit Er (Deadlock) |
| **Era 12** | 29 |   0.2% | `                    ` | 🔴 Limit Er (Deadlock) |
| **Era 13** | 16 |   0.1% | `                    ` | 🔴 Limit Er (Deadlock) |
| **Era 14** | 13 |   0.1% | `                    ` | 🔴 Limit Er (Deadlock) |

### 4.2. Rozkład Szans Wygranych Frakcji w poszczególnych Erach (% Wygranych Frakcji w danej Erze)

*Wiersze sumują się do 100.0% — wskazują która frakcja dominuje w danej fazie czasowej partii.*

| Era Końca Gry | Gry w Erze | SO % | CAA % | KB % | KT % | GC % | Dominująca Frakcja w tej Erze |
| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :--- |
| **Era 2** | 166 |   0.0% |  82.5% |   4.2% |  13.3% |   0.0% | **CAA (82.5%)** |
| **Era 3** | 953 |  22.7% |  23.9% |  21.6% |  30.3% |   1.5% | **KT (30.3%)** |
| **Era 4** | 2,739 |  30.6% |  14.3% |  21.5% |  26.9% |   6.8% | **SO (30.6%)** |
| **Era 5** | 4,214 |  31.0% |   7.0% |  29.6% |  16.2% |  16.2% | **SO (31.0%)** |
| **Era 6** | 3,807 |  32.4% |  10.5% |  13.0% |  12.4% |  31.8% | **SO (32.4%)** |
| **Era 7** | 2,449 |  43.9% |   3.7% |  10.4% |  12.5% |  29.6% | **SO (43.9%)** |
| **Era 8** | 1,013 |  22.5% |   4.0% |  15.9% |  18.4% |  39.2% | **GC (39.2%)** |
| **Era 9** | 433 |  37.6% |   2.1% |  14.1% |  16.6% |  29.6% | **SO (37.6%)** |
| **Era 10** | 121 |  26.4% |   5.8% |  14.9% |  34.7% |  18.2% | **KT (34.7%)** |
| **Era 11** | 47 |   4.3% |   6.4% |  44.7% |  36.2% |   8.5% | **KB (44.7%)** |
| **Era 12** | 29 |  24.1% |   0.0% |  31.0% |  44.8% |   0.0% | **KT (44.8%)** |
| **Era 13** | 16 |   6.2% |   0.0% |  43.8% |  50.0% |   0.0% | **KT (50.0%)** |
| **Era 14** | 13 |  23.1% |   0.0% |  15.4% |  61.5% |   0.0% | **KT (61.5%)** |

### 4.3. Rozkład Er w Kanonie 4P (5 Głównych Setupów)

| Setup 4P | Śr. Er | Era 1-4 (Wczesne / Szybkie) % | Era 5-7 (Złote Okno) % | Era 8+ (Długie) % | Główny Zwycięzca w Erze 6 |
| :--- | :---: | :---: | :---: | :---: | :--- |
| `4p-core` | **5.54** |  26.5% |  62.0% |  11.5% | **KT (30.2%)** |
| `4p-no-cienie` | **5.28** |  27.3% |  67.7% |   5.0% | **SO (31.6%)** |
| `4p-no-kabala` | **5.54** |  22.5% |  69.5% |   8.0% | **GC (38.1%)** |
| `4p-no-korona` | **5.47** |  22.3% |  71.6% |   6.1% | **GC (32.2%)** |
| `4p-no-oficjum` | **5.21** |  30.3% |  64.9% |   4.8% | **GC (43.9%)** |